# rxr

./: .gitignore  Cargo.toml  rustfmt.toml  rxr.json
src/: archive.rs  args.rs  command.rs  config.rs  configuration.rs  deserialisers.rs  dosbox_config.rs  extractor.rs  feature.rs  filters.rs  lib.rs  main.rs  mappings.rs  menu.rs  paths.rs  profile.rs  selectables.rs  template.rs  utils.rs
src/config/: commandline.rs  compiled.rs  configuration.rs  environment.rs  error.rs  mod.rs  persisted.rs  source.rs
tests/: dosbox_config_tests.rs  filters_test.rs  template_tests.rs
