[package]
name = "rxr"
version = "0.1.0"
authors = ["Stefan Alberts <stefan6573@gmail.com>"]

[dependencies]
clap = "2.29"
lazy_static = "1.0.0"
ncurses = "5.87"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

clippy = {version = "0.0.176", optional = true}

[features]
default = []

[target.x86_64-unknown-linux-gnu]
#rxr_config = "$HOME/.config/rxr.json"
#rxr_config_dir = "$HOME/.config"
#rxr_data_dir = "$HOME/.local/share/rxr"
#rxr_temp_dir = "/tmp/rxr"
