[package]
name = "rxr"
version = "0.1.0"
authors = ["Stefan Alberts <stefan6573@gmail.com>"]

[dependencies]
clap = "2.29"
difference = "1.0.0"
error_def = "0.3.16"
eval = "0.4.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
ncurses = "5.87"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

clippy = {version = "0.0.179", optional = true}

[features]
default = ["clippy"]