[package]
name = "rxr"
version = "0.1.0"
authors = ["Stefan Alberts <stefan6573@gmail.com>"]

[dependencies]
clap = "2.29"
difference = "1.0.0"
eval = "0.4.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
ncurses = "5.87"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.1"
failure_derive = "0.1.1"

clippy = {version = "0.0.186", optional = true}

[features]
default = ["clippy"]